# aoc2023

./: aoc2023.cabal
exe/: Day1.hs  Day2.hs  Main.hs
